fix(README,css): Change broken link to icons and remove styling for `samp` elements
Since `samp` elements are enclosed in single quotes already it creates
too much noise to style them like code. The default styling (just a
monospace font) produces a better look.

--- a/css/styles.css
+++ b/css/styles.css
@@ -218,6 +218,9 @@ div.example {
      * A possible solution could be to dynamically (javascript) change the styling
      * depending on the size, using 2 clases: one for 'clear: both' and another for
      * 'clear: none'
+     *
+     * Another possible solution would be to not let any element clear from any
+     * direction, but instead expand the floating element to fill the gap
      */
     clear: both;
 }
@@ -226,7 +229,6 @@ table td.code {
     padding-left: 1em;
 }
 
-samp,
 :not(pre) code.code {
     font-size: 0.9em;
     padding: 0.2em 0.33em;
